# PicturesManager

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  rustfmt.toml
.cargo/: config
public/style/: header.css
public/style/themes/: dark.css  dark.css.map
src/: app.rs  main.rs
src-common/: Cargo.toml
src-common/src/: app_data.rs  data_structs.rs  gallery.rs  gallery_cache.rs  hierarchy_config.rs  lib.rs  menu.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_data.rs  dialogs.rs  logger.rs  main.rs  menubar.rs  os.rs
src-tauri/src/gallery/: gallery_cache.rs  gallery_clusters.rs  gallery_data.rs  gallery_tags.rs  mod.rs  windows_galleries.rs
src-tauri/src/header/: macos.rs  menubar.rs  mod.rs  window.rs
src-tauri/src/utils/: commands.rs  exif_utils.rs  files_utils.rs  images.rs  images_utils.rs  logger.rs  mod.rs  settings.rs  thumbnails.rs  translator.rs
src/components/: contextmenu.rs  mod.rs  treeitem.rs  treeview.rs
src/header/: header.rs  menu.rs  menu_item_component.rs  menubar.rs  mod.rs
src/leftbar/: files_tree.rs  leftbar.rs  mod.rs
src/mainpane/: cargo_and_carousel.rs  dir_thumb.rs  full_picture.rs  mainpane.rs  mod.rs  picture_and_carousel.rs  picture_carousel.rs  picture_thumb.rs  pictures_list.rs
src/rightbar/: mod.rs  picture_preview.rs  rightbar.rs
src/utils/: keystroke.rs  logger.rs  mod.rs  translator.rs  utils.rs
style/: global.css  global.scss  header.css  header.scss  loader.scss  mainpane.css  mainpane.scss  sidebar.css  sidebar.scss  utils.scss
style/themes/: dark.css  dark.scss  light.css  light.scss
translations/en-US/: back.ftl  common.ftl  front.ftl  header.ftl  menu-bar.ftl
translations/fr-FR/: back.ftl  common.ftl  front.ftl  header.ftl  menu-bar.ftl
