[package]
name = "pictures_manager_ui"
version = "0.0.0"
description = "PicturesManager Frontend"
authors = ["Clément GRENNERAT"]
license = ""
repository = "https://github.com/ClementGre/PicturesManager"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.59", features = ["Window", "Navigator", "Element", "DomRect"]}
yew = { version="0.20.0", features = ["csr"] }
log = "^0.4"
fluent = "0.16.0"
fluent-fallback = "0.7.0"
fluent-resmgr = "0.0.6"
unic-langid = { version="0.9.1", features = ["macros"]}
url = "2.3.1"
urlencoding = "2.1.2"
once_cell = "1.16.0"
pm-common = {path = "src-common"}

[workspace]
members = ["src-tauri"]
