[package]
name = "pictures_manager_ui"
version = "0.0.0"
description = "PicturesManager Frontend"
authors = ["Clément GRENNERAT"]
license = ""
repository = "https://github.com/ClementGre/PicturesManager"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3.61"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = [
    "Window",
    "Navigator",
    "Element",
    "DomRect",
    "MediaQueryList",
] }
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8.0"
gloo-console = "0.2.3"
gloo-utils = "0.1.6"
gloo-timers = "0.2.6"
log = "^0.4"
fluent = "0.16.0"
fluent-resmgr = "0.0.6"
fluent-langneg = "0.13.0"
unic-langid = { version = "0.9.1", features = ["macros"] }
url = "2.3.1"
urlencoding = "2.1.2"
unidecode = "0.3.0"
once_cell = "1.17.1"
pm-common = { path = "src-common" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = [
    "all",
] }
futures = "0.3.28"
intl-memoizer = "0.5.1"
yewdux = "0.9"
yew_icons = { version = "0.7", features = [
    "FontAwesomeSolidMoon",
    "FontAwesomeSolidSun",
    "FontAwesomeSolidEarthEurope",
    "FontAwesomeSolidEarthAmericas",
    "FontAwesomeSolidStar",
    "FontAwesomeSolidMessage",
    "BootstrapWindows"
] }

[workspace]
members = ["src-tauri"]
