[package]
name = "pm-common"
version = "0.0.0"
description = "Common library for PicturesManager"
authors = ["Clément GRENNERAT"]
license = ""
repository = "https://github.com/ClementGre/PicturesManager"
edition = "2021"
rust-version = "1.57"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yewdux = "0.9"
num-rational = "0.4.1"

[lib]
name = "pm_common"
path = "src/lib.rs"