[package]
name = "pictures_manager"
version = "0.0.0"
description = "Pictures Manager Backend"
authors = ["Clément GRENNERAT"]
license = ""
repository = "https://github.com/ClementGre/PicturesManager"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["dialog-all", "http-all", "shell-open", "window-maximize", "window-start-dragging", "window-unmaximize"] }
tauri-utils = "1.2.1"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/tauri-plugin-window-state" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", features = ["colored"] }
log = "^0.4"
time = "0.3.17"
fluent = "0.16.0"
fluent-fallback = "0.7.0"
fluent-resmgr = "0.0.6"
fluent-langneg = "0.13.0"
unic-langid = { version="0.9.1", features = ["macros"] }
sys-locale = "0.2.3"
url = "2.3.1"
urlencoding = "2.1.2"
intl-memoizer = "0.5.1"
rustc-hash = "1.1.0"
pm-common = {path = "../src-common"}

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"

[target.'cfg(not (target_os = "macos"))'.dependencies]
window-shadows = "0.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
